--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Reyhan Verdynata</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+            
             </div>
         </div>
     </section>
@@ -57,7 +57,6 @@
                 <div class="column right">
                     <div class="text">I'm Reyhan and I'm a <span class="typing-2"></span></div>
                     <p>Hello! My name is Reyhan Verdynata, a professional in the field of Computer Engineering with extensive experience and skills in information system development. I have a particular interest in designing and building innovative and efficient technological solutions for various business needs.</p>
-                    <a href="#">Download CV</a>
                 </div>
             </div>
         </div>
@@ -101,8 +100,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>System Design & Development, expertise in designing and implementing complex information systems that streamline business processes and improve efficiency.</p>
-                    <a href="#">Read more</a>
+                    <p>My name is Reyhan Verdynata. I am a fourth-semester student in the Informatics Engineering program at Muhammadiyah University of Riau. My hobbies are playing futsal and playing games.</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
