--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">Reyhan Verdynata</a> | <span class="far fa-copyright"></span> 2024 All rights reserved.</span>
+        <span>Created By <a href="https://reydynata.github.io/PERSONAL-PORTOFOLIO-WEBSITE-REYHAN-VERDYNATA/">Reyhan Verdynata</a> | <span class="far fa-copyright"></span> 2024 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
